--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Compras.com_ordencompra_local_Info
 @{
-    ViewBag.Title = "Nueva orden";
+    ViewBag.Title = "Nueva orden de compra";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -38,6 +38,7 @@
     @Html.HiddenFor(q => q.IdOrdenCompra)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEstadoAprobacion_cat)
+    @Html.HiddenFor(q => q.Tipo)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
