--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Compras.com_ordencompra_local_Info
 @{
-    ViewBag.Title = "Modificar orden de compra";
+    ViewBag.Title = "Nueva orden de servicio";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -15,28 +15,9 @@
             </h4>
         </div>
     }
-
-    if (ViewBag.MensajeSuccess != null)
-    {
-        <div class="row">
-            <div class="col-md-12">
-                <div class="alert alert-success alert-dismissible">
-                    <h4>
-                        <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
-                    </h4>
-                </div>
-            </div>
-        </div>
-    }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script type="text/javascript">
-    function Imprimir() {
-        var location = GetPathServer();
-        var win = window.open(location +"/Reportes/CompraReportes/COMP_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdOrdenCompra="+@Model.IdOrdenCompra, '_blank');
-        win.focus();
-    }
-
     function CrearModificarProveedor() {
         var location = GetPathServer();
         if(IdProveedor.GetValue() > 0)
@@ -50,34 +31,30 @@
         }
     }
 </script>
-@using (Html.BeginForm("Modificar", "OrdenCompraLocal", FormMethod.Post, new { @role = "form", @class = "form" }))
+@using (Html.BeginForm("Nuevo", "OrdenServicio", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
 
-    @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdSucursal)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdOrdenCompra)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEstadoAprobacion_cat)
-    @Html.HiddenFor(q => q.IdComprador)
     @Html.HiddenFor(q => q.Tipo)
-    @Html.HiddenFor(q => q.SecuenciaTipo)
-
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" ,@disabled="disabled"})
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdEstadoAprobacion_cat">Estado de aprobación*</label>
                     @Html.DropDownListFor(q => q.IdEstadoAprobacion_cat, new SelectList(ViewBag.lst_apro, "IdCatalogocompra", "Nombre"), new { @class = "form-control", @id = "IdEstadoAprobacion_cat", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdEstadoAprobacion_cat, "", new { @class = "text-danger" })
-                </div>
+                </div>  
             </div>
 
             <div class="col-md-2">
@@ -94,15 +71,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.DevExpress().DateEditFor(q => q.oc_fecha, settings =>
-                   {
-                       settings.Name = "oc_fecha";
-                       settings.Properties.UseMaskBehavior = true;
-                       settings.Properties.EditFormat = EditFormat.Date;
-                       settings.Properties.EditFormatString = "dd/MM/yyyy";
-                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   }).GetHtml()
+                        @Html.DevExpress().DateEditFor(q=> q.oc_fecha, settings =>
+                    {
+                        settings.Name = "oc_fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.oc_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -132,10 +109,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="form-group">
                     <label for="IdProveedor">Proveedor*</label>
-                    @Html.Partial("_CmbProveedor_COM", Model.IdProveedor)
+                    @Html.Partial("_CmbProveedor_OS", Model.IdProveedor)
                     @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -147,7 +124,7 @@
                     </button>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdTerminoPago">Termino pago*</label>
                     @Html.DropDownListFor(q => q.IdTerminoPago, new SelectList(ViewBag.lst_termino, "IdTerminoPago", "Descripcion"), new { @class = "form-control" })
@@ -160,29 +137,15 @@
                     @Html.TextBoxFor(q => q.oc_plazo, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.oc_plazo, "", new { @class = "text-danger" })
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-4">
+            </div>  
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdDepartamento">Departamento</label>
                     @Html.DropDownListFor(q => q.IdDepartamento, new SelectList(ViewBag.lst_dep, "IdDepartamento", "nom_departamento"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.IdDepartamento, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-6 col-md-1">
-                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                    <i class="fa fa-print"></i>
-                </button>
-            </div>
-            <div class="col-md-1">
-                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","OrdenCompraLocal",new { Area = "Compras", IdEmpresa = Model.IdEmpresa },null)">
-                    <i class="fa fa-plus"></i>
-                </a>
-            </div>
+    
         </div>
     </div>
 
@@ -201,23 +164,25 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    @Html.Action("GridViewPartial_ordencompralocal_det")
+                    @Html.Action("GridViewPartial_orden_servicio_det")
                 </div>
             </div>
         </div>
     </div>
-
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","OrdenCompraLocal", new { Area = "Compras"  },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","OrdenServicio", new { Area = "Compras"  },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
 <script type="text/javascript">
+    $("#IdTerminoPago").change(function () {
+        get_info_termino_pago();
+    });
 
-        function GetInfoProducto(s, e) {
+    function GetInfoProducto(s, e) {
         $("#Secuencia").text(0);
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
@@ -227,17 +192,67 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("GetInfoProducto", "OrdenCompraLocal",new { Area = "Compras"})',
+            url: '@Url.Action("GetInfoProducto", "OrdenServicio",new { Area = "Compras"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridView_ordencompralocal_det.GetEditor('IdCod_Impuesto').SetValue(data.IdCod_Impuesto_Iva);
+                GridViewPartial_orden_servicio_det.GetEditor('IdCod_Impuesto').SetValue(data.IdCod_Impuesto_Iva);
             },
             error: function (error) {
             }
         });
-    }
+    };
+
+    function set_termino_pago_x_proveedor() {
+        if (IdProveedor.GetValue() > 0) {
+            var datos = {
+                IdEmpresa: $("#IdEmpresa").val(),
+                IdProveedor: IdProveedor.GetValue()
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("get_info_termino_pago_x_proveedor", "OrdenServicio", new { Area = "Compras" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    $("#IdTerminoPago").val(data.IdTerminoPago);
+                    get_info_termino_pago();
+                },
+                error: function (error) {
+                }
+            });
+        }
+    };
+
+    function get_info_termino_pago() {
+        if ($("#IdTerminoPago").val() > 0) {
+            var datos = {
+                IdEmpresa: $("#IdEmpresa").val(),
+                IdTerminoPago: $("#IdTerminoPago").val()
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("get_info_termino_pago", "OrdenServicio", new { Area = "Compras" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    console.log(data);
+                    $("#oc_plazo").val(data.Dias);
+                },
+                error: function (error) {
+                }
+            });
+        }
+    };
 </script>
