--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio.cshtml
@@ -2,8 +2,8 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridView_ordencompralocal";
-        settings.CallbackRouteValues = new { Controller = "OrdenCompraLocal", Action = "GridViewPartial_ordencompralocal", IdSucursal = ViewBag.IdSucursal, fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, tipo = ViewBag.Tipo };
+        settings.Name = "GridViewPartial_orden_servicio";
+        settings.CallbackRouteValues = new { Controller = "OrdenServicio", Action = "GridViewPartial_orden_servicio", IdSucursal = ViewBag.IdSucursal, fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, tipo = ViewBag.Tipo};
         settings.KeyFieldName = "IdOrdenCompra";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
