--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CompraReportes/COMP_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CompraReportes/COMP_001.cshtml
@@ -5,13 +5,14 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Areas/Reportes/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm())
 {
     @Html.DevExpress().WebDocumentViewer(settings =>
-                   {
-                       settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
-                       settings.MobileMode = false;
-                       settings.Name = "webDocumentViewer";
-}).Bind(Model).GetHtml()
+    {
+        settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+        settings.MobileMode = false;
+        settings.Name = "webDocumentViewer";
+    }).Bind(Model).GetHtml()
 }
