--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_CmbProducto_OS.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_CmbProducto_OS.cshtml
@@ -25,8 +25,8 @@
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "GetInfoProducto";
 
     })
-    .BindList(new Core.Erp.Web.Areas.Compras.Controllers.OrdenCompraLocalController().get_list_bajo_demandaProducto,
-    new Core.Erp.Web.Areas.Compras.Controllers.OrdenCompraLocalController().get_info_bajo_demandaProducto)
+    .BindList(new Core.Erp.Web.Areas.Compras.Controllers.OrdenServicioController().get_list_bajo_demandaProducto,
+    new Core.Erp.Web.Areas.Compras.Controllers.OrdenServicioController().get_info_bajo_demandaProducto)
     .Bind(Model);
 }
 @comboBox.GetHtml()
