--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/_GridViewPartial_AprobacionPresupuestoDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/_GridViewPartial_AprobacionPresupuestoDet.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_AprobacionPresupuestoDet";
-        settings.CallbackRouteValues = new { Controller = "Presupuesto", Action = "GridViewPartial_AprobacionPresupuestoDet", Area = "Presupuesto" };
+        settings.CallbackRouteValues = new { Controller = "AprobacionPresupuesto", Action = "GridViewPartial_AprobacionPresupuestoDet", Area = "Presupuesto" };
         settings.KeyFieldName = "Secuencia";
 
         settings.Width = Unit.Percentage(100);
