--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Nuevo.cshtml
@@ -57,17 +57,55 @@
         selectedIDs = values.join(',');
     }
 
+    //function MostrarModal() {
+    //    if (Number($("#cr_TotalCobro").val()) == 0) {
+    //        alert("Debe ingresar el total a cobrar");
+    //        return;
+    //    }
+
+    //    selectedIDs = "";
+    //    GridView_cobranza_facturas_x_cruzar.PerformCallback();
+    //    GridView_cobranza_facturas_x_cruzar.UnselectRows();
+    //    $("#FacturasModal").modal("show");
+    //}
+
     function MostrarModal() {
-        if (Number($("#cr_TotalCobro").val()) == 0) {
+        if (Number($("#cr_TotalCobro").val()) == 0)
+        {
             alert("Debe ingresar el total a cobrar");
             return;
         }
+        else
+        {
+            selectedIDs = "";
+            var datos = {
+                IdTransaccionSession: $("#IdTransaccionSession").val(),
+                IdEmpresa: $("#IdEmpresa").val(),
+                IdSucursal: $("#IdSucursal").val(),
+                IdCliente: IdCliente.GetValue()
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("GetListFacturas_PorIngresar", "Cobranza", new { Area = "CuentasPorCobrar" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    console.log(data);
+                    GridView_cobranza_facturas_x_cruzar.PerformCallback();
+                    GridView_cobranza_facturas_x_cruzar.UnselectRows();
+                    $("#FacturasModal").modal("show");
 
-        selectedIDs = "";
-        GridView_cobranza_facturas_x_cruzar.PerformCallback();
-        GridView_cobranza_facturas_x_cruzar.UnselectRows();
-        $("#FacturasModal").modal("show");
+                },
+                error: function (error) {
+                }
+            });
+        }       
     }
+
     function GetIdCajaPorSucursal() {
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
@@ -94,7 +132,6 @@
         });
     };
     function AddFacturas() {
-
         var datos = {
             IDs: selectedIDs,
             TotalACobrar: $("#cr_TotalCobro").val(),
