--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_CmbCtaCbleCXP_Proveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_CmbCtaCbleCXP_Proveedor.cshtml
@@ -11,7 +11,7 @@
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.ValueField = "IdCtaCble";
         settings.Properties.TextField = "pc_Cuenta";
-        settings.Properties.TextFormatString = "[{0}] {1}";        
+        settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueType = typeof(string);
         settings.Properties.FilterMinLength = 3;
 
@@ -19,7 +19,9 @@
         settings.Properties.AllowNull = true;
 
         settings.Properties.Columns.Add("IdCtaCble", "ID", 10);
-        settings.Properties.Columns.Add("pc_Cuenta", "Cuenta contable", 80);       
+        settings.Properties.Columns.Add("pc_Cuenta", "Cuenta", 40);
+        settings.Properties.Columns.Add("IdCtaCblePadre", "ID Padre", 10);
+        settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre", 40);
     })
     .BindList(new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.ProveedorController().get_list_bajo_demanda_ctacble_cxp, new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.ProveedorController().get_info_bajo_demanda_ctacble_cxp)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.CuentasPorPagar.cp_proveedor_Info) ? "" : Model);
