--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_CmbCtaCbleGasto_Proveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_CmbCtaCbleGasto_Proveedor.cshtml
@@ -19,7 +19,9 @@
         settings.Properties.AllowNull = true;
 
         settings.Properties.Columns.Add("IdCtaCble", "ID", 10);
-        settings.Properties.Columns.Add("pc_Cuenta", "Cuenta contable", 80);
+        settings.Properties.Columns.Add("pc_Cuenta", "Cuenta contable", 40);
+        settings.Properties.Columns.Add("IdCtaCblePadre", "ID Padre", 10);
+        settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre", 40);
     })
     .BindList(new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.ProveedorController().get_list_bajo_demanda_ctacble_gasto, new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.ProveedorController().get_info_bajo_demanda_ctacble_gasto)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.CuentasPorPagar.cp_proveedor_Info) ? "" : Model);
