--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/_CmbCuenta_contable_imp.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/_CmbCuenta_contable_imp.cshtml
@@ -14,7 +14,9 @@
         settings.Properties.ValueField = "IdCtaCble";
         settings.Properties.ValueType = typeof(string);
         settings.Properties.Columns.Add("IdCtaCble", "ID", 10);
-        settings.Properties.Columns.Add("pc_Cuenta", "Cuenta", 90);
+        settings.Properties.Columns.Add("pc_Cuenta", "Cuenta contable", 40);
+        settings.Properties.Columns.Add("IdCtaCblePadre", "ID Padre", 10);
+        settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre", 40);
     })
     .BindList(new Core.Erp.Web.Areas.Importacion.Controllers.ParametrosImportacionController().get_list_bajo_demanda_cta, new Core.Erp.Web.Areas.Importacion.Controllers.ParametrosImportacionController().get_info_bajo_demanda_cta)
 
