--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Nuevo.cshtml
@@ -35,6 +35,36 @@
         GridView_comprobante_detalle.PerformCallback();
     }
 
+    function MostrarModalPlantilla() {
+        $("#PlantillaModal").modal("show");
+    }
+
+    function AgregarPlantilla(IdPlantilla) {
+        var datos = {
+            IdPlantilla: IdPlantilla,
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_PlantillaComprobante", "PlantillaComprobanteContable", new { Area = "Contabilidad"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                IdTipoCbte.SetValue(data.IdTipoCbte);
+                $("#cb_Observacion").val(data.cb_Observacion);
+                GridView_comprobante_detalle.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+
+        $("#PlantillaModal").modal("hide");
+
+    }
 </script>
 @using (Html.BeginForm("Nuevo", "ComprobanteContable", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
@@ -47,6 +77,24 @@
         </div>
 
     }
+
+    <div class="modal fade" id="PlantillaModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Plantilla comprobante contable</h4>
+                </div>
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_ComprobanteContablePlantilla_Asignar", new { Area = "Contabilidad", Controller = "PlantillaComprobanteContable" })
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
@@ -139,6 +187,15 @@
                    settings.ClientSideEvents.FilesUploadStart = "OnFileUploadStart";
                    settings.ClientSideEvents.FileUploadComplete = "OnFileUploadComplete";
                }).GetHtml()
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <button type="button" class="btn btn-primary" id="btn_buscar_plantilla" onclick="MostrarModalPlantilla();">
+                    <i class="fa fa-search" title="Plantilla Tipo de Flujo"></i>
+                </button>
             </div>
         </div>
     </div>
