--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Modificar.cshtml
@@ -29,10 +29,9 @@
 
     $(function () {
         GetValor();
-        $("#cb_Valor").change(function () {
-            actualizarGridDetFlujo();
-        });
+        
     });
+    GridView_flujo_det.PerformCallback();
 function GetValor()
     {
         var datos = {
