--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Contabilizar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Contabilizar.cshtml
@@ -27,12 +27,6 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script>
 
-    $(function () {
-        $("#cb_Valor").change(function () {
-            actualizarGridDetFlujo();
-        });
-    });
-
     function MostrarModalPlantilla() {
         $("#PlantillaModal").modal("show");
     }
@@ -75,7 +69,6 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                console.log(data);
                 GridView_flujo_det.PerformCallback();
             },
             error: function (error) {
@@ -101,6 +94,29 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function ArmarDiario() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdBanco: $("#IdBanco").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("ArmarDiario", "ArchivoBancario", new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_comprobante_detalle.PerformCallback();
             },
             error: function (error) {
             }
@@ -314,7 +330,10 @@
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_op" aria-controls="op" role="tab" data-toggle="tab">Ordenes de pago   </a>
+                <a href="#tab_op" aria-controls="op" role="tab" data-toggle="tab">Ordenes de pago</a>
+            </li>
+            <li>
+                <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
             </li>
             <li>
                 <a href="#tab_flujo" aria-controls="flujo" role="tab" data-toggle="tab">Flujo</a>
@@ -396,7 +415,9 @@
                 <br />
                 @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "ArchivoBancario" })
             </div>
-
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">
+                @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
+            </div>
 
         </div>
     </div>
